--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     background-color: #F0FFF0;
     margin-bottom: 50px;
 }
-.container{
+.margin-bot{
     margin-bottom: 50px;
 }
 .logo-img{
@@ -45,3 +45,111 @@
     width: 554px;
     height: 346px;
 }
+.card-img{
+    width: 66px;
+    height: 85px;
+    margin: 0 auto;
+}
+.book-card{
+    border: none;
+    background-color: #F0FFF0;
+    border-radius: 10px;
+    padding: 30px 0px;
+}
+.card-body-tags h5{
+    color:#413960;
+    text-align: center;
+}
+.card-body-tags p{
+    color:#585859;
+    text-align: center;
+}
+.card-heighlight{
+    border: none;
+    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    background-color: #FFFFFF;
+    padding: 30px 0px;
+}
+.online-courses{
+    margin-top: 90px;
+    margin-bottom: 50px;
+    color:  #413960;
+
+}
+.card p{
+    color:#585859;
+}
+.card h5{
+    color:#413960;
+}
+.buy-btn{
+    border: none;
+    padding: 12px 36px;
+    background-color: #21B573;
+    color: #fff;
+    border-radius: 33px;
+    margin-bottom: 30px;
+}
+.courses-card img{
+    width: 90%;
+    margin: 0 auto;
+}
+.courses-card-bottom img{
+    margin: 0;
+    padding: 0;
+    width: 15%;
+    height: 60%;
+    margin-right: 6px;
+}
+.courses-card{
+    border: none;
+    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    background-color: #FFFFFF;
+    padding-top: 20px;
+}
+.testimonial {
+    margin-top: 85px;
+    margin-bottom: 30px;
+}
+.testimonial-contant img{
+    width: 120px;
+    height: 120px;
+    float: right;
+}
+.testimonial-contant p{
+    margin-top: 25px;
+    margin-left: 25px;
+}
+footer{
+    background-color: #282531;
+    color: #FFFFFF;
+    padding-bottom: 30px;
+}
+footer a{
+    text-decoration: none;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 15px;
+}
+.footer-sec{
+    margin-top: 50px;
+    margin-bottom: 70px;
+}
+.footer-p2 {
+    line-height: 25px;
+}
+ul {
+    list-style: none;
+    margin-left: -31px;
+}
+.footer-p2 h6{
+    font-size: 18px;
+}
+@media only screen and (max-width: 600px) {
+    .testimonial-contant img{
+        margin-right: 165px;
+    }
+  }
